--- a/style.css
+++ b/style.css
@@ -25,12 +25,17 @@ h1 {
   width: 600px;
 }
 
+.header-cell:not(:last-child) {
+  border-right: 1px dotted;
+}
+
+
 ::-webkit-scrollbar {
   width: 8px;
 }
 
 ::-webkit-scrollbar-track {
-  background-color: rgba(0, 0, 0, 0.1);
+  background-color: #eeeeee;
 }
 
 ::-webkit-scrollbar-thumb {
