--- a/style.css
+++ b/style.css
@@ -34,13 +34,13 @@ h1 {
 }
 
 ::-webkit-scrollbar-track {
-  background-color: #eeeeee;
+  background-color: #3b3b3b;
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: rgba(0, 0, 0, 0.3);
+  background-color: #818181;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background-color: rgba(0, 0, 120, 0.5);
+  background-color: #4b78FA;
 }
